--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                           <li>Support from certified trainers</li>
                       </ul>
                   </div>
-                  <button class="bg-white text-black py-3 px-6 rounded-full hover:bg-gray-300 transition duration-300 text-lg font-semibold">Get Started</button>
+                  <a href="https://forms.gle/4xL6ccpuLZPDSGyS7"></a><button class="bg-white text-black py-3 px-6 rounded-full hover:bg-gray-300 transition duration-300 text-lg font-semibold">Get Started</button></a>
               </div>
               <div class="bg-black rounded-lg shadow-md p-8 border border-gray-700 text-center flex flex-col justify-between">
                   <div>
@@ -473,7 +473,7 @@
                       </ul>
                       
                   </div>
-                  <button class="bg-white text-black py-3 px-6 rounded-full hover:bg-gray-300 transition duration-300 text-lg font-semibold">Book Now</button>
+                <a href="https://forms.gle/4xL6ccpuLZPDSGyS7"><button class="bg-white text-black py-3 px-6 rounded-full hover:bg-gray-300 transition duration-300 text-lg font-semibold">Book Now</button></a>
               </div>
               <div class="bg-black rounded-lg shadow-md p-8 border border-gray-700 text-center flex flex-col justify-between">
                   <div>
@@ -486,7 +486,7 @@
                           <li>Nutritional guidance</li>
                       </ul>
                   </div>
-                  <button class="bg-white text-black py-3 px-6 rounded-full hover:bg-gray-300 transition duration-300 text-lg font-semibold">Sign Up</button>
+                  <a href="https://forms.gle/4xL6ccpuLZPDSGyS7"><button class="bg-white text-black py-3 px-6 rounded-full hover:bg-gray-300 transition duration-300 text-lg font-semibold">Sign Up</button></a>
               </div>
           </div>
       </section>
