--- a/classes.html
+++ b/classes.html
@@ -188,6 +188,18 @@
                         This practice aids in deepening poses, relieving chronic pain, and improving therapeutic benefits.
                     </p>
                 </div>
+                 <div class="bg-black text-center rounded-lg shadow-md p-6 w-full text-white mb-8">
+    
+            <p class="mb-4 text-sm">
+              Ready to get started? Join us today and unlock exclusive benefits and opportunities!
+            </p>
+            <div class="flex justify-center mt-6">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMdD8mbvwBV2N5-ddeLd1ukm1tTEWvpCupGkBWHb7sWC-MLg/viewform?usp=dialog" 
+                 class="bg-white text-black py-3 px-6 rounded-full hover:bg-gray-300 transition duration-300 text-lg font-semibold">
+                Join Now
+              </a>
+            </div>
+          </div>
             </div>
         </section>
     </main>
